--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Namdhinggo:wght@400;500;600;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
-    <title>Vite + React</title>
+    <title>
+      BUCKINGHAM FINE ART - Investing In Innovative Artists Since 1983
+    </title>
   </head>
   <body>
     <div id="root"></div>
